# qsp-mcp

./: .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
src/qsp_mcp/: __init__.py  cli.py  client.py  config.py  relay.py  schema.py
tests/: test_security.py
